--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,11 @@
             <version>1.37</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jblas</groupId>
+            <artifactId>jblas</artifactId>
+            <version>1.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
