--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,13 @@
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>1.37</version>
-            <scope>test</scope>
+            <version>1.35</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.35</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jblas</groupId>
